--- a/greap-storage/build.gradle
+++ b/greap-storage/build.gradle
@@ -2,7 +2,7 @@ dependencies {
   // https://mvnrepository.com/artifact/org.rocksdb/rocksdbjni
   implementation group: 'org.rocksdb', name: 'rocksdbjni', version: '6.20.3'
 // https://mvnrepository.com/artifact/redis.clients/jedis
-  implementation group: 'redis.clients', name: 'jedis', version: '3.6.0'
+//  implementation group: 'redis.clients', name: 'jedis', version: '3.6.0'
 // https://mvnrepository.com/artifact/io.netty/netty-all
   implementation group: 'io.netty', name: 'netty-all', version: '4.1.65.Final'
 
