--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,9 @@ buildscript {
       }
     }
     repoClosure = {
-      mavenLocal()
       mavenCentral()
+      maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+      mavenLocal()
 
 
     }
@@ -25,7 +26,6 @@ allprojects { project ->
   project.repositories rootProject.repoClosure
 
   group = 'io.github.helium-cloud'
-  //version = "1.0.0-SNAPSHOT"
   version = "1.0.0-release"
 }
 
@@ -44,18 +44,22 @@ subprojects { project ->
   tasks.withType(Test) {
     defaultCharacterEncoding = "UTF-8"
   }
-
   dependencies {
-    compile group: 'org.slf4j', name: 'slf4j-api', version: slf4j_version
-    testCompile "junit:junit:$junit_version"
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_version}"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:${junit_version}"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junit_version}"
+    testImplementation "org.mockito:mockito-core:${mockito_version}"
+    testImplementation "org.mockito:mockito-junit-jupiter:${mockito_version}"
   }
-
 
   task sourceJar(type: Jar) {
     from sourceSets.main.allJava
     classifier = 'sources'
   }
-
+  test {
+    useJUnitPlatform()
+  }
   if (!(project.name in mavenPublishIgnoreList)) {
     publishing {
       repositories {
