--- a/redis-client/build.gradle
+++ b/redis-client/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
-  implementation group: 'redis.clients', name: 'jedis', version: '3.6.0'
-  testCompile group: 'junit', name: 'junit', version: '4.12'
+  implementation group: 'io.github.helium-cloud', name: 'helium-monitor', version: helium_version
+  implementation group: 'io.github.helium-cloud', name: 'helium-logging', version: helium_version
+  implementation group: 'redis.clients', name: 'jedis', version: jredis_version
 }
