--- a/redis-server/build.gradle
+++ b/redis-server/build.gradle
@@ -1,8 +1,12 @@
 dependencies {
-  compile project(":redis-storage");
-  implementation group: 'io.github.helium-cloud', name: 'helium-monitor', version: '1.0.0-release'
-  implementation group: 'io.github.helium-cloud', name: 'helium-logging', version: '1.0.0-release'
+  implementation project(":redis-storage");
+  implementation group: 'org.rocksdb', name: 'rocksdbjni', version: '6.20.3'
+  implementation group: 'io.github.helium-cloud', name: 'helium-monitor', version: helium_version
+//  implementation group: 'io.github.helium-cloud', name: 'helium-logging', version: helium_version
   implementation group: 'redis.clients', name: 'jedis', version: '3.6.0'
   implementation group: 'io.netty', name: 'netty-all', version: '4.1.65.Final'
-  testCompile group: 'junit', name: 'junit', version: '4.12'
+
+  // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+  testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.2'
+
 }
