--- a/redis-storage/build.gradle
+++ b/redis-storage/build.gradle
@@ -1,7 +1,5 @@
 dependencies {
-  // https://mvnrepository.com/artifact/org.rocksdb/rocksdbjni
+  implementation group: 'org.slf4j', name: 'slf4j-api', version: slf4j_version
   implementation group: 'org.rocksdb', name: 'rocksdbjni', version: '6.20.3'
   implementation group: 'io.netty', name: 'netty-all', version: '4.1.65.Final'
-
-  testCompile group: 'junit', name: 'junit', version: '4.12'
 }
