--- a/redis-storage/build.gradle
+++ b/redis-storage/build.gradle
@@ -2,6 +2,7 @@ dependencies {
   implementation group: 'org.slf4j', name: 'slf4j-api', version: slf4j_version
   implementation group: 'org.rocksdb', name: 'rocksdbjni', version: '6.20.3'
   implementation group: 'io.netty', name: 'netty-all', version: '4.1.65.Final'
+  implementation group: 'io.github.helium-cloud', name: 'helium-monitor', version: helium_version
   compile 'io.protostuff:protostuff-core:1.5.9'
   compile 'io.protostuff:protostuff-runtime:1.5.9'
 }
