--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,6 @@ rootProject.name = 'rcpredis'
 //helium-common
 include 'redis-common'
 include 'redis-storage'
-include 'redis-client'
-include 'redis-server'
+//include 'redis-client'
+//include 'redis-server'
 
