--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,10 @@
 slf4j_version=1.7.25
-junit_version=5.7.0
-mockito_version=3.9.0
+
 helium_version=1.0.0-SNAPSHOT
 jredis_version=3.6.0
+rocksdb_version=6.20.3
+netty_version=4.1.65.Final
+protostuff_version=1.5.9
+
+junit_version=5.7.0
+mockito_version=3.9.0
