--- a/redis-client/build.gradle
+++ b/redis-client/build.gradle
@@ -49,15 +49,10 @@ task buildDocker(type: Docker, dependsOn: buildRunJar) {
 
 
 dependencies {
-
   compile group: 'io.github.helium-cloud', name: 'helium-monitor', version: helium_version
   compile group: 'io.github.helium-cloud', name: 'helium-logging', version: helium_version
   compile group: 'redis.clients', name: 'jedis', version: jredis_version
 
-  // https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch
-  compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.12.0'
-
-
-  compile files("${System.properties['java.home']}/../lib/tools.jar")
+  testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.2'
 
 }
