--- a/redis-server/build.gradle
+++ b/redis-server/build.gradle
@@ -48,6 +48,7 @@
 
 
 dependencies {
+  compile project(":redis-cluster");
   compile project(":redis-storage");
   implementation group: 'org.rocksdb', name: 'rocksdbjni', version: '6.20.3'
   compile group: 'io.github.helium-cloud', name: 'helium-monitor', version: helium_version
